# slang

./: CMakeLists.txt
bindings/python/: SyntaxBindings.cpp  UtilBindings.cpp
cmake/: install-rules.cmake
docs/: building.dox
include/slang/compilation/: Compilation.h
include/slang/parsing/: Preprocessor.h
include/slang/syntax/: SyntaxTree.h
include/slang/util/: Format.h
source/: CMakeLists.txt
source/ast/: Compilation.cpp
source/ast/symbols/: CompilationUnitSymbols.cpp
source/compilation/: Compilation.cpp
source/diagnostics/: TextDiagnosticClient.cpp
source/driver/: Driver.cpp  SourceLoader.cpp
source/numeric/: ConstantValue.cpp  SVInt.cpp  Time.cpp
source/parsing/: Preprocessor.cpp
source/syntax/: SyntaxTree.cpp
source/util/: CommandLine.cpp  TimeTrace.cpp  Util.cpp
tests/unittests/: DiagnosticTests.cpp  DriverTests.cpp  ExpressionParsingTests.cpp  LexerTests.cpp  MemberParsingTests.cpp  PreprocessorTests.cpp  StatementParsingTests.cpp  Test.cpp  Test.h
tools/driver/: driver.cpp  slang_main.cpp
tools/hier/: CMakeLists.txt
tools/netlist/: CMakeLists.txt
tools/netlist/include/: Netlist.h
tools/reflect/: CMakeLists.txt
tools/reflect/src/: SvEnum.cpp  SvStruct.cpp  SvType.cpp
tools/tidy/src/: TidyConfigParser.cpp
wip/: CMakeLists.txt  Visitor.cpp  Visitor.h  driver.cpp
